# ProjectLegends

./: .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  REFACTORING_CHANGELOG.md  TODO.md
.githooks/: pre-commit
.github/: baseline_globals.yaml
.github/workflows/: ci.yml  module-dag.yml  pal-ci.yml  sprint2-checks.yml
benchmarks/: bench_pal.cpp
cmake/: LegendsConfig.cmake.in  ModuleDAG.cmake  ModuleManifest.cmake
engine/: AIBOX_README.md  CMakeLists.txt  LIBRARY_CONTRACT.md  globals_registry.yaml
engine/cmake/: CompileFirewall.cmake  test_cxx23.cpp
engine/docs/: API.md  SDL_AUDIT.md
engine/include/: bios_disk.h  builtin.h  dos_inc.h  dosbox.h  jfont.h  mem.h  render.h  timer.h  vga.h
engine/include/aibox/: builder.h  callback_registry.h  cpu_context.h  dma.h  dosboxx_embed.h  enums.h  error.h  event_bus.h  events.h  exceptions.h  ffi.h  ffi_core.h  ffi_events.h  ffi_llm.h  ffi_vision.h  function_ref.h  handle_registry.h  headless_stub.h  io_port.h  llm_actions.h  llm_diff.h  llm_frame.h  llm_serializer.h  machine_context.h  memory.h  optional_utils.h  vision_annotations.h  vision_capture.h  vision_framebuffer.h  vision_overlay.h
engine/include/dosbox/: builtin_types.h  cdrom_interface.h  cpu_bridge.h  dosbox_context.h  dosbox_library.h  engine_services.h  engine_state.h  error_mapping.h  error_model.h  instance_handle.h  logging.h  render_types.h  safe_call.h  state_hash.h
engine/include/dosbox/platform/: audio.h  display.h  headless.h  input.h  platform.h  timing.h
engine/src/: winres.rc
engine/src/aibox/: dosboxx_embed_api.cpp  headless_stub.cpp  llm_actions.cpp  llm_diff.cpp  llm_frame.cpp  llm_serializer.cpp  machine_context.cpp  vision_annotations.cpp  vision_capture.cpp  vision_framebuffer.cpp  vision_overlay.cpp
engine/src/builtin/: cdplay.cpp  dosmid.cpp  eval.cpp  glide2x.cpp  mpxplay.cpp  ne2000bin.cpp  shutdown.cpp  textutil.cpp  zip.cpp
engine/src/dos/: dev_con.h  dos_memory.cpp  drive_physfs.cpp
engine/src/hardware/: dma_compat.cpp  memory.cpp  pic.cpp  pic_compat.cpp  vga.cpp  vga_compat.cpp  vga_draw.cpp
engine/src/ints/: bios.cpp  bios_disk.cpp  int10.cpp  int10.h  int10_compat.cpp  int10_modes.cpp  int_dosv.cpp
engine/src/misc/: cpu_bridge.cpp  dosbox_context.cpp  dosbox_library.cpp  error_model.cpp  instance_handle.cpp  logging.cpp  mkdir_p.cpp  safe_call.cpp  savestates.cpp  state_hash.cpp  state_hash_compat.cpp  support.cpp
engine/src/platform/headless/: buffer_audio.cpp  headless_display.cpp  thread_safe_input.cpp
engine/tests/: CMakeLists.txt
engine/tests/determinism/: CMakeLists.txt  determinism_harness.h  test_determinism.cpp
engine/tests/unit/: test_audio_integration.cpp  test_builder.cpp  test_callback_registry.cpp  test_compat_shim.cpp  test_cpu_bridge.cpp  test_cpu_context.cpp  test_display_integration.cpp  test_dma.cpp  test_dma_migration.cpp  test_dos_filesystem_migration.cpp  test_dos_migration.cpp  test_dosbox_context.cpp  test_dosbox_cpu.cpp  test_dosbox_error_model.cpp  test_dosbox_instance_handle.cpp  test_dosbox_library.cpp  test_dosbox_logging.cpp  test_dosbox_mixer.cpp  test_dosbox_pic_keyboard_input.cpp  test_dosbox_safe_call.cpp  test_dosbox_state_hash.cpp  test_dosbox_timing.cpp  test_dosbox_vga.cpp  test_dosboxx_abi.c  test_dosboxx_embed.cpp  test_enums.cpp  test_error.cpp  test_event_bus.cpp  test_events.cpp  test_exceptions.cpp  test_ffi.cpp  test_function_ref.cpp  test_handle_registry.cpp  test_headless_backend.cpp  test_input_integration.cpp  test_io_port.cpp  test_keyboard_migration.cpp  test_llm_actions.cpp  test_llm_diff.cpp  test_llm_frame.cpp  (+14 more)
include/legends/: builder.h  callback_registry.h  contracts.hpp  cpu_context.h  dma.h  enums.h  error.h  event_bus.h  events.h  exceptions.h  ffi.h  ffi_core.h  ffi_events.h  ffi_llm.h  ffi_vision.h  function_ref.h  gsl.hpp  handle_registry.h  headless_stub.h  io_port.h  legends_embed.h  llm_actions.h  llm_diff.h  llm_frame.h  llm_serializer.h  machine_context.h  memory.h  optional_utils.h  vision_annotations.h  vision_capture.h  vision_framebuffer.h  vision_overlay.h
include/pal/: audio_sink.h  context.h  host_clock.h  input_source.h  platform.h  types.h  window.h
scripts/: check_current_context.py  check_globals.py  check_gsl_lite_usage.py  check_includes.py  check_migration_status.py  measure_rebuild.py  verify_plan_adherence.py
scripts/schemas/: phase-03-dma.json  phase-04-dos.json  phase-05-pic.json  phase-06-vga.json  phase-07-memory.json  phase-08-keyboard.json  phase-09-dos-filesystem.json  phase-10-ci-enforcement.json
spec/: CONTRACT.md  VERIFICATION_REPORT.md
spec/tla/: APIContract.cfg  APIContract.tla  Bus.tla  BusMinimal.tla  BusTest.tla  Capture.cfg  Capture.tla  DMA.tla  DMATest.tla  DMATest_TTrace_1768377344.tla  Determinism.cfg  Determinism.tla  EmuKernel.tla  Input.cfg  Input.tla  InterruptTest.tla  Lifecycle.cfg  Lifecycle.tla  LifecycleMinimal.cfg  LifecycleMinimal.tla  PAL.cfg  PAL.tla  PALMinimal.cfg  PALMinimal.tla  PIC.tla  PIT.tla  SaveState.tla  SaveStateTest.cfg  SaveStateTest.tla  SaveStateTest_TTrace_1768377546.tla  Scheduler.tla  SchedulerMinimal.tla  SchedulerTest.tla  Threading.cfg  Threading.tla  ThreadingMinimal.cfg  ThreadingMinimal.tla  Types.tla
sprint3/: README.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md
src/legends/: headless_stub.cpp  legends_embed_api.cpp  legends_embed_internal.h  llm_actions.cpp  llm_diff.cpp  llm_frame.cpp  llm_serializer.cpp  machine_context.cpp  vision_annotations.cpp  vision_capture.cpp  vision_framebuffer.cpp  vision_overlay.cpp
tests/fuzz/: CMakeLists.txt  fuzz_engine_load_state.cpp  fuzz_legends_load_state.cpp  generate_corpus.cpp
tests/integration/: test_input_injection.cpp  test_save_state_safety.cpp  test_workflow_basic.cpp  test_workflow_determinism.cpp  test_workflow_input.cpp  test_workflow_llm.cpp  test_workflow_saveload.cpp
tests/toolchain/: test_cpp_standard.cpp
tests/unit/: test_builder.cpp  test_callback_registry.cpp  test_compat_shim.cpp  test_contract_gates.cpp  test_cpu_context.cpp  test_dma.cpp  (+39 more)
(+18 files in other folders)
